--- a/index.html
+++ b/index.html
@@ -145,7 +145,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
              <div class="line"></div>
          </div>
 
-        <h3 class="mbr-fonts-style mbr-section-subtitle align-center mbr-light pt-3 display-5">I would rather prefer to CODE then to watch NETFLIX for hours</h3>
+        <h3 class="mbr-fonts-style mbr-section-subtitle align-center mbr-light pt-3 display-5">I would rather prefer to CODE then to watch NETFLIX for hours
+      <br>
+      <br>
+      Could I Be More Dedicated?!</h3>
 
         <div class="row justify-content-center pt-5">
             <div class="col-md-6 row-item col-lg-3">
