--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <section class="menu cid-qwqLcABlWO" once="menu" id="menu2-6k" data-rv-view="3454">
 
-
-
-
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
+          <span class="navbar-logo">
+
+                        <img src="favicon.ico" alt="favicon" style="height: 3.8rem;">
+
+                </span>
         <div class="navbar-brand">
 
             <span class="navbar-caption-wrap">
