--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
           <span class="navbar-logo">
 
-                        <img src="favicon.ico" alt="favicon" style="height: 3.8rem;">
+                        <img src="FAVICON.ico" alt="favicon" style="height: 3.8rem;">
 
                 </span>
         <div class="navbar-brand">
